test/files/continuations-run/return1.check
return1.scala:17: error: return expression not allowed due to annotation checking
      return 10
      ^
